# Average-Binary-Tree-ABT

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  benchmark_results.csv  pyproject.toml  reproduce_paper.py  requirements-dev.txt  requirements.txt
abt/: __init__.py  _facade.py  core.py
abt/applications/: demos.py
abt/benchmarks/: __init__.py  runner.py
abt/extensions/: __init__.py  variants.py
abt/math/: __init__.py  definitions.py  invariants.py  operators.py  proofs.py  theorems.py
abt/viz/: __init__.py  visualizer.py
examples/: applications.py  quickstart.py  run_benchmarks.py
notebooks/: 01_abt_basics.ipynb  02_theorem_validation.ipynb  10_future_research.ipynb
tests/: conftest.py
tests/fuzz/: test_fuzz.py
tests/integration/: test_integration.py
tests/property/: test_properties.py
tests/unit/: test_core.py  test_extensions.py  test_theorems.py
